--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
 $c-gray: #eee;
+$c-blue: #0075ff;
+$c-text: #3e3e3e;
+$input-color: #f7f8ff;
+$brakepoint: 1024px;
+$section-padding-top-L: 104px;
+$section-padding-top-S: 64px;
+
+$transition-duration: 0.3s;
